# fab_scanner_python

./: .gitignore  README.md  pyproject.toml
src/carder/: __main__.py
src/carder/cli/: __init__.py  carder.py  settings.py
src/carder/cli/commands/: download.py  match.py  scan.py
src/carder/models/db/: __init__.py  card_images.py
src/carder/models/fabtcg/: card.py  print.py
src/carder/services/: card_image_downloader.py  db.py  downloader.py  fabtcg.py  image_hashers.py  image_hashing.py  local_storage.py  scanner.py
src/smartbinder/: model.py
src/smartbinder/models/: tfc_fabcards_db.py
src/smartbinder/services/: catalog.py
