[project]
name = "smartbinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.2",
    "aiosqlite>=0.20.0",
    "imagehash>=4.3.1",
    "loguru>=0.7.2",
    "opencv-python>=4.10.0.84",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pytesseract>=0.3.13",
    "requests-toolbelt>=1.0.0",
    "typer>=0.13.1",
]
